feat: add first implementation of the player details endpoint
